# RustInfoInvest

./: .rust-media-player-indentify  3  :w  Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml  rust_arch.yml  rust_fedora.yml
config/: data.ron
local_libs/: libSDL3_ttf.so.0.2.2
src/: build.rs  buttons.rs  date.rs  getinfo.rs  getonlineinfo.rs  input_handler.rs  investment_wallet.rs  main.rs  math.rs  pages.rs  quit.rs  sdl2_generators.rs  sdl3_generators.rs  ui.rs  window.rs
