[package]
name = "RustInfoInvest"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
fantoccini = "0.21.4"
percentage = "0.1.0"
sdl3 = { version = "0.14.27", features = ["build-from-source", "ttf"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
