[package]
name = "RustInfoInvest"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
fantoccini = "0.22.0"
percentage = "0.1.0"
sdl3 = { version = "0.14.40", features = ["build-from-source", "ttf"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
