[package]
name = "RustInfoInvest"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[profile.dev]
incremental = true

[profile.release]
incremental = false

[dependencies]
chrono = "0.4.41"
fantoccini = "0.22.0"
fontconfig = "0.10.0"
percentage = "0.1.0"
sdl3 = { version = "0.15.1", features = ["build-from-source", "ttf"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
